# ptextpad

./: .flake8  .gitignore  README.md  extra-req-for-mypython.txt  install-sw.sh  nodemon.json  package-lock.json  package.json  pylintrc  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  youdao_cache.sqlite
data/: 2017-02-04_dual.docx  Folding_Beijing-en.epub  Folding_Beijing_12.txt  Folding_Beijing_12xls.txt  Folding_Beijing_ch1-en.txt  Folding_Beijing_ch1-zh.txt  The.Big.Bang.Theory.S10E15.720p.HDTV.X264-DIMENSION.ass  To Kill a Mockingbird.mobi  en.txt  news_anchored_paras_bk.txt  newsen.txt  newszh.txt  test.html  zh.txt  双语新闻.htm  爱丽丝漫游奇境记.txt
docs/: basic_usage.md  basic_usage.rst  conf.py  index - Copy.rst  index.rst  intro.md  intro.rst  readme.md  use_cases.md  use_cases.rst
ptextpad/: __init__.py  __main__.py  align_blocks_final.py  align_sent.py  align_text.py  amend_avec.py  chardet_file.py  clapse_text.py  csv_to_list.py  data_for_updating.py  detect_file.py  detect_lang.py  docx_to_text.py  docx_to_txt.py  element_to_string.py  en_zh_separation.py  epub_to_txt.py  fetch_url.py  fetch_url_ui.py  fetch_xpath.py  gen_aligned_sentlist.py  get_anchor_set.py  get_para.py  help_manual.py  html2txt.py  insert_itag.py  list_to_csv.py  list_to_selected_rows.py  lists_to_tmx4n.py  load_file_as_text.py  load_text.py  load_zipped.py  loadtext.py  logging_progress.py  minifuncwrapper.py  mlbee_client.py  msg_popup.py  myqprogressbar.py  mytable-looks-ok.py  mytable.py  (+45 more)
ptextpad/singlehtml/: .buildinfo  index.html  objects.inv
ptextpad/ui/: neualigner-org-pyqt4.ui  neualigner.ui  (+5 more)
tests/: __init__.py  test_detect_lang.py  test_insert_itag.py  test_load_file_as_text.py  test_load_text.py  test_ptextpad.py  test_radio_mlbee_client.py  test_set_anchor_extra_outputs.py  test_wakeup_mlbee.py
(+1 files in other folders)
